---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/check_eq.gleam
---
STDOUT
Running tests...
Failure at check_eq.string_examples:9
  Actual  : "wrong string"
  Expected: "not this"
4 tests, 3 success(es), 1 failure(s) and 0 error(s).

STDERR
warning: Unused private function
  ┌─ /src/check_eq.gleam:3:1
  │
3 │ fn ignore_examples() {
  │ ^^^^^^^^^^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
